---
source: compiler-core/src/javascript/tests/try_.rs
assertion_line: 77
expression: "pub fn main() {\n  {\n    try b = Error(Nil);\n    b\n  }\n  Ok(1)\n}"
---
import { Ok, Error } from "../gleam.mjs";

export function main() {
  (() => {
    let $ = new Error(undefined);
    if (!$.isOk()) return $;
    let b = $[0];

    return b;
  })();
  return new Ok(1);
}

